// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector: Account billing form changePlanInitialValues when NOT self serve should find and return secret plan 1`] = `
Object {
  "billingAddress": Object {
    "country": "US",
    "firstName": "ann",
    "lastName": "perkins",
    "state": "AL",
  },
  "email": "ann@perkins.com",
  "planpicker": Object {
    "billingId": "ias",
    "code": "im a secret",
    "isFree": false,
    "status": "secret",
  },
}
`;

exports[`Selector: Account billing form changePlanInitialValues when NOT self serve should return change plan values: with a billing id 1`] = `
Object {
  "billingAddress": Object {
    "country": "US",
    "firstName": "ann",
    "lastName": "perkins",
    "state": "AL",
  },
  "email": "ann@perkins.com",
  "planpicker": Object {
    "billingId": "1",
    "code": "abc",
  },
}
`;

exports[`Selector: Account billing form changePlanInitialValues when NOT self serve should return change plan values: without billing id 1`] = `
Object {
  "billingAddress": Object {
    "country": "US",
    "firstName": "ann",
    "lastName": "perkins",
    "state": "AL",
  },
  "email": "ann@perkins.com",
  "planpicker": Object {
    "code": "abc",
  },
}
`;

exports[`Selector: Account billing form updateConteactInitialValues should return update contact values 1`] = `
Object {
  "billingContact": Object {
    "country": "GG",
    "email": "ann@perkins.com",
    "firstName": "ann",
    "lastName": "perkins",
    "state": "EZ",
    "zip": "54321",
  },
}
`;

exports[`Selector: Account billing form updatePaymentInitialValues should return update payment values 1`] = `
Object {
  "billingAddress": Object {
    "country": "US",
    "firstName": "ann",
    "lastName": "perkins",
    "state": "AL",
  },
}
`;
